# pocketpaw

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  dev.sh  procs.txt  pyproject.toml  sync-upstream.sh  test.js  test2.js  test_out.txt  test_tool.py  workflow.md.bk
docs/deployment/: docker.mdx
installer/: install.ps1  installer.py
installer/launcher/: __main__.py  bootstrap.py  common.py  tray.py
scripts/: cleanup_pocketpaw_data.py
skills/: gradio-client-integration.skill  gradio-to-fastapi.skill
skills/gradio-client-integration/: SKILL.md
skills/gradio-to-fastapi/: SKILL.md
src/pocketclaw/: config.py  dashboard.py
src/pocketpaw/: config.py  dashboard.py  dashboard_lifecycle.py  dashboard_ws.py
src/pocketpaw/ai_ui/builtins/freecut/source/backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_agent_loop.py  test_agents.py  test_ai_fast_api_auto_rotate_service.py  test_ai_fast_api_ollama_service.py  test_ai_ui_api_cancel_install.py  test_ai_ui_builtins.py  test_ai_ui_plugin_scaffold.py  test_ai_ui_plugins_runtime.py  test_ai_ui_plugins_tool.py  test_ai_ui_requirements.py  test_ai_ui_summary.py  test_codex_cli_backend.py  test_commands.py  test_health.py  test_llm_client.py  test_mem0_store.py  test_memory_edge_cases.py  test_openai_compatible_agent.py  test_pinokio_isolation.py  test_research.py  test_session_index.py  test_skills.py  test_skills_api.py  test_web_search.py
tests/e2e/: conftest.py  test_counter_app_install.py  test_dashboard.py  test_pinokio_isolation.py  test_plugins_wan2gp.py
(+203 files in other folders)
