[project]
name = "freecut-backend"
version = "0.0.0"
description = "FreeCut Video Editor - Python Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "psutil>=6.1.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = []
